Wed Jan 14 22:38:30 2009  Tanaka Akira  <akr@fsij.org>

	* gc.c (negative_size_allocation_error_with_gvl): abolish a warning.
	  (negative_size_allocation_error): ditto.

	* ext/openssl/ossl.c (ossl_raise): ditto.

Thu Jan 15 13:10:58 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (COMPILERFLAG): for enc/trans/gb18030.c.

Thu Jan 15 00:06:12 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/trans/gb18030.trans: get rid of a 1.9 feature for cross
	  compile.  [ruby-core:21345]

Wed Jan 14 20:05:05 2009  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/trans/gb18030.trans, gb18030-tbl.rb:
	  new Chinese GB18030 transcoding (from Yoshihiro Kambayashi)

	* test/ruby/test_transcode.rb: added tests for the above
	  (from Yoshihiro Kambayashi)

	* transcode_data.h, transcode.c, tool/transcode_tblgen.rb:
	  added support for GB18030-specific 4-byte sequences
	  (with Yoshihiro Kambayashi)

Wed Jan 14 16:16:19 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/curses/extconf.rb: check ncursesw earlier than ncurses to
	  support UTF-8 strings.   non UTF-8 strings should be converted
	  explicitly.   [ruby-core:21094]

Wed Jan 14 13:09:00 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/extconf.rb (gai_strerror): checks if available and if
	  returns const pointer.

	* ext/socket/getaddrinfo.c (gai_strerror): defines only if non
	  available.  [ruby-core:21328]

Wed Jan 14 12:39:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_wait_readable, rb_io_wait_writable): need rb_fd_ptr.

	* io.c (appendline): reformed.

	* io.c (rb_io_s_pipe): reduced nest of rb_ensure of main block.

Tue Jan 13 21:45:53 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/ostruct.rb (OpenStruct#inspect): fixed the recursion check.
	  Patch by Kornelius Kalnbach.  [ruby-core:20992].

	* test/ostruct/test_ostruct.rb: test for inspect.
	  Patch by Kornelius Kalnbach.  [ruby-core:20992].

Tue Jan 13 21:28:14 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
